src/coreaudio/coreaudio.rs

#[test]
fn bindgen_test_layout__saudio_AudioStreamBasicDescription() {
    assert_eq!(
        ::std::mem::size_of::<_saudio_AudioStreamBasicDescription>(),
        40usize,
        concat!("Size of: ", stringify!(_saudio_AudioStreamBasicDescription))
    );
    assert_eq!(
        ::std::mem::align_of::<_saudio_AudioStreamBasicDescription>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(_saudio_AudioStreamBasicDescription)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mSampleRate as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mSampleRate)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mFormatID as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mFormatID)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mFormatFlags as *const _
                as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mFormatFlags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mBytesPerPacket
                as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mBytesPerPacket)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mFramesPerPacket
                as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mFramesPerPacket)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mBytesPerFrame
                as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mBytesPerFrame)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mChannelsPerFrame
                as *const _ as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mChannelsPerFrame)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mBitsPerChannel
                as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mBitsPerChannel)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamBasicDescription>())).mReserved as *const _
                as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamBasicDescription),
            "::",
            stringify!(mReserved)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _saudio_AudioStreamPacketDescription {
    pub mStartOffset: i64,
    pub mVariableFramesInPacket: u32,
    pub mDataByteSize: u32,
}
#[test]
fn bindgen_test_layout__saudio_AudioStreamPacketDescription() {
    assert_eq!(
        ::std::mem::size_of::<_saudio_AudioStreamPacketDescription>(),
        16usize,
        concat!(
            "Size of: ",
            stringify!(_saudio_AudioStreamPacketDescription)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<_saudio_AudioStreamPacketDescription>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(_saudio_AudioStreamPacketDescription)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamPacketDescription>())).mStartOffset
                as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamPacketDescription),
            "::",
            stringify!(mStartOffset)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamPacketDescription>())).mVariableFramesInPacket
                as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamPacketDescription),
            "::",
            stringify!(mVariableFramesInPacket)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioStreamPacketDescription>())).mDataByteSize
                as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioStreamPacketDescription),
            "::",
            stringify!(mDataByteSize)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _saudio_SMPTETime {
    pub mSubframes: i16,
    pub mSubframeDivisor: i16,
    pub mCounter: u32,
    pub mType: _saudio_SMPTETimeType,
    pub mFlags: _saudio_SMPTETimeFlags,
    pub mHours: i16,
    pub mMinutes: i16,
    pub mSeconds: i16,
    pub mFrames: i16,
}
#[test]
fn bindgen_test_layout__saudio_SMPTETime() {
    assert_eq!(
        ::std::mem::size_of::<_saudio_SMPTETime>(),
        24usize,
        concat!("Size of: ", stringify!(_saudio_SMPTETime))
    );
    assert_eq!(
        ::std::mem::align_of::<_saudio_SMPTETime>(),
        4usize,
        concat!("Alignment of ", stringify!(_saudio_SMPTETime))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_SMPTETime>())).mSubframes as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mSubframes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_SMPTETime>())).mSubframeDivisor as *const _ as usize
        },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mSubframeDivisor)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_SMPTETime>())).mCounter as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mCounter)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_SMPTETime>())).mType as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mType)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_SMPTETime>())).mFlags as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mFlags)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_SMPTETime>())).mHours as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mHours)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_SMPTETime>())).mMinutes as *const _ as usize },
        18usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mMinutes)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_SMPTETime>())).mSeconds as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mSeconds)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_SMPTETime>())).mFrames as *const _ as usize },
        22usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_SMPTETime),
            "::",
            stringify!(mFrames)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _saudio_AudioTimeStamp {
    pub mSampleTime: f64,
    pub mHostTime: u64,
    pub mRateScalar: f64,
    pub mWordClockTime: u64,
    pub mSMPTETime: _saudio_SMPTETime,
    pub mFlags: _saudio_AudioTimeStampFlags,
    pub mReserved: u32,
}
#[test]
fn bindgen_test_layout__saudio_AudioTimeStamp() {
    assert_eq!(
        ::std::mem::size_of::<_saudio_AudioTimeStamp>(),
        64usize,
        concat!("Size of: ", stringify!(_saudio_AudioTimeStamp))
    );
    assert_eq!(
        ::std::mem::align_of::<_saudio_AudioTimeStamp>(),
        8usize,
        concat!("Alignment of ", stringify!(_saudio_AudioTimeStamp))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioTimeStamp>())).mSampleTime as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioTimeStamp),
            "::",
            stringify!(mSampleTime)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioTimeStamp>())).mHostTime as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioTimeStamp),
            "::",
            stringify!(mHostTime)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioTimeStamp>())).mRateScalar as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioTimeStamp),
            "::",
            stringify!(mRateScalar)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioTimeStamp>())).mWordClockTime as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioTimeStamp),
            "::",
            stringify!(mWordClockTime)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioTimeStamp>())).mSMPTETime as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioTimeStamp),
            "::",
            stringify!(mSMPTETime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<_saudio_AudioTimeStamp>())).mFlags as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioTimeStamp),
            "::",
            stringify!(mFlags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_saudio_AudioTimeStamp>())).mReserved as *const _ as usize
        },
        60usize,
        concat!(
            "Offset of field: ",
            stringify!(_saudio_AudioTimeStamp),
            "::",
            stringify!(mReserved)
        )
    );
}
